Issue #28676: Prevent missing 'getentropy' declaration warning on macOS. Initial patch by Gareth Rees.